--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.2.2",
+    "npm-check-updates": "^7.0.2",
     "object-assign-deep": "^0.4.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
@@ -30,7 +31,10 @@
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
-  "prettier": "./configuration/.prettierrc.json",
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
+  },
   "eslintConfig": {
     "extends": "./configuration/eslint.cjs",
     "rules": {
