--- a/package.json
+++ b/package.json
@@ -12,28 +12,30 @@
     "postinstall": "node ./installation.js"
   },
   "dependencies": {
-    "@types/jest": "^26.0.8",
-    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@babel/preset-env": "^7.11.0",
+    "@types/jest": "^26.0.10",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
     "chalk": "^4.1.0",
-    "chokidar": "^3.4.1",
-    "esbuild": "^0.6.16",
-    "eslint": "^7.6.0",
+    "chokidar": "^3.4.2",
+    "esbuild": "^0.6.26",
+    "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "jest": "^26.2.2",
-    "npm-check-updates": "^7.0.2",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "jest": "^26.4.0",
+    "npm-check-updates": "^7.1.1",
     "object-assign-deep": "^0.4.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "standard-version": "^8.0.2",
-    "ts-jest": "^26.1.4",
+    "standard-version": "^9.0.0",
+    "ts-jest": "^26.2.0",
     "typescript": "^3.9.7"
   },
   "prettier": {
