--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "object-assign-deep": "^0.4.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
+    "sort-package-json": "^1.44.0",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.2.0",
     "typescript": "^3.9.7"
