--- a/template/cli/package.json
+++ b/template/cli/package.json
@@ -2,6 +2,10 @@
   "name": "<%= name %>",
   "description": "<%= description %>",
   "version": "0.0.0",
+  "bin": "./cli/index.js",
+  "files": [
+    "cli"
+  ],
   "devDependencies": {
     "padua": "^0.0.4"
   }
