--- a/template/node/package.json
+++ b/template/node/package.json
@@ -2,6 +2,9 @@
   "name": "<%= name %>",
   "description": "<%= description %>",
   "version": "0.0.0",
+  "files": [
+    "index.js"
+  ],
   "devDependencies": {
     "padua": "^0.0.4"
   }
