--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "jest": "^26.4.0",
     "npm-check-updates": "^7.1.1",
     "object-assign-deep": "^0.4.0",
+    "pakag": "^1.0.1",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "sort-package-json": "^1.44.0",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.2.0",
     "typescript": "^3.9.7"
