--- a/template/node/package.json
+++ b/template/node/package.json
@@ -2,6 +2,7 @@
   "name": "<%= name %>",
   "description": "<%= description %>",
   "version": "0.0.0",
+  "type": "module",
   "files": [
     "index.js"
   ],
