--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "chokidar": "^3.4.2",
+    "current-git-branch": "^1.1.0",
     "esbuild": "^0.6.28",
     "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -49,7 +50,6 @@
       "import/extensions": 0
     }
   },
-  "color": "green",
   "files": [
     "configuration",
     "script",
