--- a/configuration/tsconfig.json
+++ b/configuration/tsconfig.json
@@ -6,5 +6,6 @@
     "declaration": true,
     "lib": ["DOM", "ES6"]
   },
-  "files": ["../../../index.ts"]
+  "files": ["../../../index.ts"],
+  "include": ["../../../test"]
 }
