--- a/configuration/tsconfig.json
+++ b/configuration/tsconfig.json
@@ -4,7 +4,9 @@
     "esModuleInterop": true,
     "outDir": "../../../dist",
     "declaration": true,
-    "lib": ["DOM", "ES6"]
+    "lib": ["DOM", "ES6"],
+    "experimentalDecorators": true,
+    "moduleResolution": "node"
   },
   "files": ["../../../index.ts"],
   "include": ["../../../test"]
