--- a/configuration/tsconfig.json
+++ b/configuration/tsconfig.json
@@ -9,5 +9,6 @@
     "moduleResolution": "node"
   },
   "files": ["../../../index.ts"],
-  "include": ["../../../test"]
+  "include": ["../../../test"],
+  "exclude": ["../../../dist"]
 }
