feat(configuration): generate both jsconfig and tsconfig
BREAKING CHANGE: config is now always generated and should be ignored

--- a/configuration/tsconfig.json
+++ b/configuration/tsconfig.json
@@ -1,14 +1,3 @@
 {
-  "compilerOptions": {
-    "jsx": "react",
-    "esModuleInterop": true,
-    "outDir": "../../../dist",
-    "declaration": true,
-    "lib": ["DOM", "ES6"],
-    "experimentalDecorators": true,
-    "moduleResolution": "node"
-  },
-  "files": ["../../../index.ts"],
-  "include": ["../../../test"],
-  "exclude": ["../../../dist"]
+  "comment": "This file will be generated from ./tsconfig.js"
 }
