--- a/template/node/package.json
+++ b/template/node/package.json
@@ -3,10 +3,13 @@
   "description": "<%= description %>",
   "version": "0.0.0",
   "type": "module",
+  "padua": {
+    "source": true
+  },
   "files": [
     "index.js"
   ],
   "devDependencies": {
-    "padua": "^0.0.9"
+    "padua": "^0.0.11"
   }
 }
