--- a/template/cli/package.json
+++ b/template/cli/package.json
@@ -3,10 +3,13 @@
   "description": "<%= description %>",
   "version": "0.0.0",
   "bin": "./cli/index.js",
+  "padua": {
+    "source": true
+  },
   "files": [
     "cli"
   ],
   "devDependencies": {
-    "padua": "^0.0.9"
+    "padua": "^0.0.11"
   }
 }
