fix(lint): import extensions actually required for node source code

--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
   "eslintConfig": {
     "extends": "./configuration/eslint.cjs",
     "rules": {
-      "import/extensions": 0
+      "import/extensions": [
+        2,
+        "always"
+      ]
     }
   },
   "files": [
