--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-jest": "^26.3.0",
     "chokidar": "^3.4.2",
     "current-git-branch": "^1.1.0",
+    "deep-for-each": "^3.0.0",
     "esbuild": "^0.7.4",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -30,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.0",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "fast-glob": "^3.2.4",
     "jest": "^26.4.2",
     "logua": "^2.1.1",
     "npm-check-updates": "^9.0.2",
