--- a/package.json
+++ b/package.json
@@ -9,38 +9,41 @@
   "type": "module",
   "scripts": {
     "release": "standard-version",
-    "postinstall": "node ./installation.js"
+    "postinstall": "node ./installation.js",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
     "@types/jest": "^26.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "chokidar": "^3.4.2",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
-    "esbuild": "^0.7.4",
-    "eslint": "^7.9.0",
+    "esbuild": "^0.7.8",
+    "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-airbnb-typescript": "^10.0.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.0",
+    "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
     "fast-glob": "^3.2.4",
     "jest": "^26.4.2",
     "logua": "^2.1.1",
-    "npm-check-updates": "^9.0.2",
+    "npm-check-updates": "^9.0.3",
     "object-assign-deep": "^0.4.0",
     "pakag": "^2.0.1",
+    "parse-gitignore": "^1.0.1",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
+    "skip-local-postinstall": "^1.0.2",
     "standard-version": "^9.0.0",
-    "ts-jest": "^26.4.0",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   },
   "prettier": {
@@ -53,6 +56,20 @@
       "import/extensions": [
         2,
         "always"
+      ]
+    }
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/template/",
+      "/script/"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": [
+        "babel-jest",
+        {
+          "configFile": "./configuration/.babelrc"
+        }
       ]
     }
   },
