--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fast-glob": "^3.2.4",
+    "filesize": "^6.1.0",
+    "gzip-size": "^5.1.1",
     "jest": "^26.6.1",
     "logua": "^2.1.1",
     "npm-check-updates": "^9.2.2",
