--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.12.1",
-    "@types/jest": "^26.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
+    "@babel/preset-env": "^7.12.10",
+    "@types/jest": "^26.0.19",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.1",
+    "babel-jest": "^26.6.3",
     "chokidar": "^3.4.3",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
-    "esbuild": "^0.7.21",
-    "eslint": "^7.12.0",
-    "eslint-config-airbnb": "^18.2.0",
+    "esbuild": "^0.8.22",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^6.14.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fast-glob": "^3.2.4",
     "filesize": "^6.1.0",
-    "gzip-size": "^5.1.1",
-    "jest": "^26.6.1",
-    "logua": "^2.1.1",
-    "npm-check-updates": "^9.2.2",
+    "gzip-size": "^6.0.0",
+    "jest": "^26.6.3",
+    "logua": "^2.1.2",
+    "npm-check-updates": "^10.2.5",
     "object-assign-deep": "^0.4.0",
-    "pakag": "^2.1.0",
+    "pakag": "^2.1.1",
     "parse-gitignore": "^1.0.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "skip-local-postinstall": "^1.0.2",
+    "skip-local-postinstall": "^1.0.5",
     "standard-version": "^9.0.0",
-    "ts-jest": "^26.4.2",
-    "typescript": "^4.0.3"
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
   },
   "type": "module",
   "main": "index.js",
@@ -75,6 +75,9 @@
     "testPathIgnorePatterns": [
       "/template/",
       "/script/"
+    ],
+    "modulePathIgnorePatterns": [
+      "/template/"
     ],
     "transform": {
       "^.+\\.jsx?$": [
