--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@types/jest": "^26.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "chokidar": "^3.4.3",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
-    "esbuild": "^0.8.22",
+    "esbuild": "^0.8.23",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
@@ -37,7 +37,8 @@
     "logua": "^2.1.2",
     "npm-check-updates": "^10.2.5",
     "object-assign-deep": "^0.4.0",
-    "pakag": "^2.1.1",
+    "pacote": "^11.1.13",
+    "pakag": "^2.2.0",
     "parse-gitignore": "^1.0.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
@@ -76,8 +77,10 @@
       "/template/",
       "/script/"
     ],
+    "testEnvironment": "node",
     "modulePathIgnorePatterns": [
-      "/template/"
+      "/template/",
+      "/test/fixture/"
     ],
     "transform": {
       "^.+\\.jsx?$": [
