--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "dependencies": {
     "@babel/preset-env": "^7.12.13",
     "@types/jest": "^26.0.20",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "chokidar": "^3.5.1",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
-    "esbuild": "^0.8.40",
+    "esbuild": "^0.8.43",
     "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
@@ -33,18 +33,20 @@
     "fast-glob": "^3.2.5",
     "filesize": "^6.1.0",
     "gzip-size": "^6.0.0",
+    "is-ci": "^2.0.0",
     "jest": "^26.6.3",
+    "lodash.unset": "^4.5.2",
     "logua": "^2.1.2",
     "npm-check-updates": "^11.1.1",
     "object-assign-deep": "^0.4.0",
-    "pacote": "^11.2.4",
+    "pacote": "^11.2.6",
     "pakag": "^2.2.0",
     "parse-gitignore": "^1.0.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "skip-local-postinstall": "^1.0.5",
     "standard-version": "^9.1.0",
-    "ts-jest": "^26.5.0",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.3"
   },
   "type": "module",
