--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.13.10",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "babel-eslint": "^10.1.0",
@@ -21,7 +21,7 @@
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
     "deepmerge": "^4.2.2",
-    "esbuild": "^0.9.2",
+    "esbuild": "^0.9.3",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -36,6 +36,8 @@
     "gzip-size": "^6.0.0",
     "is-ci": "^3.0.0",
     "jest": "^26.6.3",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
     "logua": "^2.1.4",
     "npm-check-updates": "^11.3.0",
@@ -44,9 +46,9 @@
     "parse-gitignore": "^1.0.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "skip-local-postinstall": "^2.0.0",
+    "skip-local-postinstall": "^2.0.1",
     "standard-version": "^9.1.1",
-    "ts-jest": "^26.5.3",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
   "type": "module",
