--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
     "@types/jest": "^26.0.21",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "chokidar": "^3.5.1",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
     "deepmerge": "^4.2.2",
-    "esbuild": "^0.9.3",
+    "esbuild": "^0.9.6",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fast-glob": "^3.2.5",
     "filesize": "^6.1.0",
@@ -41,12 +42,12 @@
     "lodash.unset": "^4.5.2",
     "logua": "^2.1.4",
     "npm-check-updates": "^11.3.0",
-    "pacote": "^11.3.0",
+    "pacote": "^11.3.1",
     "pakag": "^2.4.0",
     "parse-gitignore": "^1.0.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "skip-local-postinstall": "^2.0.1",
+    "skip-local-postinstall": "^2.0.2",
     "standard-version": "^9.1.1",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
