--- a/package.json
+++ b/package.json
@@ -11,45 +11,45 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.14.2",
+    "@babel/eslint-parser": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
     "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "babel-jest": "^27.0.2",
     "chokidar": "^3.5.1",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
     "deepmerge": "^4.2.2",
-    "esbuild": "^0.12.5",
-    "eslint": "^7.27.0",
+    "esbuild": "^0.12.8",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-cypress": "^2.11.3",
-    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fast-glob": "^3.2.5",
     "filesize": "^6.3.0",
     "gzip-size": "^6.0.0",
     "is-ci": "^3.0.0",
-    "jest": "^27.0.1",
+    "jest": "^27.0.4",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
     "logua": "^2.1.4",
-    "npm-check-updates": "^11.5.13",
-    "pacote": "^11.3.3",
-    "pakag": "^2.4.0",
+    "npm-check-updates": "^11.6.0",
+    "pacote": "^11.3.4",
+    "pakag": "^2.5.0",
     "parse-gitignore": "^1.0.1",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
     "skip-local-postinstall": "^2.0.2",
     "standard-version": "^9.3.0",
-    "ts-jest": "^27.0.1",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.2"
   },
   "type": "module",
@@ -98,7 +98,7 @@
       ]
     },
     "transformIgnorePatterns": [
-      "node_modules/cint"
+      "/node_modules/(?!jest-fixture|logua|pakag).*/"
     ]
   },
   "engines": {
