--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "rimraf": "^3.0.2",
     "skip-local-postinstall": "^2.0.2",
     "standard-version": "^9.3.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended": "^5.0.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.2"
   },
