--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.15.4",
-    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-env": "^7.15.6",
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
@@ -20,7 +20,7 @@
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
     "deepmerge": "^4.2.2",
-    "esbuild": "^0.12.25",
+    "esbuild": "^0.12.26",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
@@ -51,7 +51,7 @@
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.3"
   },
   "type": "module",
   "main": "index.js",
@@ -66,6 +66,10 @@
     "utility",
     "*.d.ts",
     "*.js"
+  ],
+  "keywords": [
+    "build",
+    "plugin"
   ],
   "prettier": {
     "singleQuote": true,
