feat(release): release as version check & clean before build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "padua",
-  "description": "Tool to configure, setup, build, test and publish npm plugins.",
+  "description": "Setup, configure, build and publish npm plugins.",
   "version": "0.3.12",
   "repository": "github:tobua/padua",
   "license": "MIT",
@@ -11,40 +11,40 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.15.4",
+    "@babel/eslint-parser": "^7.15.7",
     "@babel/preset-env": "^7.15.6",
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "babel-jest": "^27.1.1",
+    "@types/jest": "^27.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "babel-jest": "^27.2.4",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
     "deepmerge": "^4.2.2",
-    "esbuild": "^0.12.26",
+    "esbuild": "^0.13.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fast-glob": "^3.2.7",
-    "filesize": "^8.0.0",
+    "filesize": "^8.0.3",
     "gzip-size": "^6.0.0",
     "is-ci": "^3.0.0",
-    "jest": "^27.1.1",
+    "jest": "^27.2.4",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
     "logua": "^2.1.4",
     "npm-check-updates": "^11.8.5",
-    "pacote": "^11.3.5",
+    "pacote": "^12.0.0",
     "pakag": "^2.5.0",
     "parse-gitignore": "^1.0.1",
-    "prettier": "^2.4.0",
+    "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "skip-local-postinstall": "^2.0.2",
     "standard-version": "^9.3.1",
