--- a/package.json
+++ b/package.json
@@ -11,46 +11,47 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "babel-jest": "^27.4.5",
+    "@babel/preset-env": "^7.16.11",
+    "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "babel-jest": "^27.4.6",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
     "deepmerge": "^4.2.2",
-    "esbuild": "^0.14.5",
-    "eslint": "^8.5.0",
-    "eslint-config-airbnb": "^19.0.2",
+    "esbuild": "^0.14.14",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "fast-glob": "^3.2.7",
-    "filesize": "^8.0.6",
+    "fast-glob": "^3.2.11",
+    "filesize": "^8.0.7",
     "gzip-size": "^7.0.0",
     "is-ci": "^3.0.1",
-    "jest": "^27.4.5",
+    "jest": "^27.4.7",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
     "logua": "^2.1.4",
-    "npm-check-updates": "^12.0.5",
-    "pacote": "^12.0.2",
+    "npm-check-updates": "^12.2.1",
+    "pacote": "^12.0.3",
     "pakag": "^2.6.0",
     "parse-gitignore": "^1.0.1",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "skip-local-postinstall": "^2.0.2",
     "standard-version": "^9.3.2",
-    "stylelint": "^14.1.0",
+    "strip-ansi": "^7.0.1",
+    "stylelint": "^14.3.0",
     "stylelint-config-recommended": "^6.0.0",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
   },
   "type": "module",
   "main": "index.js",
@@ -102,7 +103,7 @@
       ]
     },
     "transformIgnorePatterns": [
-      "/node_modules/(?!jest-fixture|logua|pakag|gzip-size).*/"
+      "/node_modules/(?!jest-fixture|logua|pakag|gzip-size|strip-ansi|ansi-regex).*/"
     ]
   },
   "engines": {
