--- a/package.json
+++ b/package.json
@@ -10,48 +10,49 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-env": "^7.20.2",
-    "@types/jest": "^29.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "babel-jest": "^29.3.1",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/preset-env": "^7.21.4",
+    "@npmcli/map-workspaces": "^3.0.3",
+    "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "babel-jest": "^29.5.0",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
-    "deepmerge": "^4.2.2",
-    "esbuild": "^0.17.0",
-    "eslint": "^8.32.0",
+    "deepmerge": "^4.3.1",
+    "esbuild": "^0.17.15",
+    "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-cypress": "^2.13.2",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fast-glob": "^3.2.12",
-    "filesize": "^10.0.6",
+    "filesize": "^10.0.7",
     "gzip-size": "^7.0.0",
     "is-ci": "^3.0.1",
-    "jest": "^29.3.1",
+    "jest": "^29.5.0",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
-    "logua": "^2.1.4",
-    "npm-check-updates": "^16.6.2",
-    "pacote": "^15.0.8",
-    "pakag": "^2.6.0",
+    "logua": "^2.2.0",
+    "npm-check-updates": "^16.10.0",
+    "pacote": "^15.1.1",
+    "pakag": "^2.7.0",
     "parse-gitignore": "^2.0.0",
-    "prettier": "^2.8.3",
-    "rimraf": "^4.0.5",
+    "prettier": "^2.8.7",
+    "rimraf": "^4.4.1",
     "skip-local-postinstall": "^2.0.4",
     "standard-version": "^9.5.0",
     "strip-ansi": "^7.0.1",
-    "stylelint": "^14.16.1",
-    "stylelint-config-recommended": "^9.0.0",
+    "stylelint": "^15.4.0",
+    "stylelint-config-recommended": "^11.0.0",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4"
+    "typescript": "^5.0.3"
   },
   "type": "module",
   "main": "index.js",
@@ -73,7 +74,8 @@
   ],
   "prettier": {
     "singleQuote": true,
-    "semi": false
+    "semi": false,
+    "printWidth": 100
   },
   "eslintConfig": {
     "extends": "./configuration/eslint.cjs",
@@ -103,7 +105,7 @@
       ]
     },
     "transformIgnorePatterns": [
-      "/node_modules/(?!jest-fixture|logua|pakag|gzip-size|strip-ansi|ansi-regex).*/"
+      "/node_modules/(?!jest-fixture|logua|pakag|gzip-size|strip-ansi|ansi-regex|sort-package-json|detect-indent|detect-newline|is-plain-obj|sort-object-keys).*/"
     ]
   },
   "engines": {
