--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # npm provenance
     steps:
       - uses: actions/checkout@v3
       - name: 🗄️ Configure Cache
@@ -20,6 +22,7 @@ jobs:
         run: npm install
       - name: 🧪 Test
         run: npm test
-      - uses: tobua/release-npm-action@v1
+      - run: npm install -g npm@latest
+      - uses: tobua/release-npm-action@v2
         with:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
