--- a/package.json
+++ b/package.json
@@ -7,51 +7,47 @@
   "author": "Matthias Giger",
   "scripts": {
     "postinstall": "node ./installation.js",
-    "test": "jest"
+    "test": "vitest run"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.22.7",
-    "@babel/preset-env": "^7.22.7",
+    "@babel/eslint-parser": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
     "@manypkg/find-root": "^2.2.1",
     "@npmcli/map-workspaces": "^3.0.4",
-    "@types/jest": "^29.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "babel-jest": "^29.6.1",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
     "deepmerge": "^4.3.1",
-    "esbuild": "^0.18.11",
-    "eslint": "^8.44.0",
+    "esbuild": "^0.19.2",
+    "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-cypress": "^2.14.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "fast-glob": "^3.3.0",
-    "filesize": "^10.0.7",
+    "fast-glob": "^3.3.1",
+    "filesize": "^10.0.12",
     "gzip-size": "^7.0.0",
     "is-ci": "^3.0.1",
-    "jest": "^29.6.1",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
     "logua": "^2.3.0",
-    "npm-check-updates": "^16.10.15",
-    "pacote": "^15.2.0",
-    "pakag": "^2.10.0",
+    "npm-check-updates": "^16.12.2",
+    "pacote": "^17.0.2",
+    "pakag": "^3.1.0",
     "parse-gitignore": "^2.0.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.2",
     "skip-local-postinstall": "^2.0.4",
     "standard-version": "^9.5.0",
     "strip-ansi": "^7.1.0",
-    "stylelint": "^15.10.1",
+    "stylelint": "^15.10.3",
     "stylelint-config-recommended": "^13.0.0",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
   "type": "module",
@@ -59,7 +55,8 @@
   "bin": "cli.js",
   "source": "index.js",
   "devDependencies": {
-    "jest-fixture": "^4.1.0"
+    "jest-fixture": "^4.1.0",
+    "vitest": "^0.34.2"
   },
   "files": [
     "configuration",
@@ -81,28 +78,6 @@
         "always"
       ]
     }
-  },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/template/",
-      "/script/"
-    ],
-    "testEnvironment": "node",
-    "modulePathIgnorePatterns": [
-      "/template/",
-      "/test/fixture/"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": [
-        "babel-jest",
-        {
-          "configFile": "./configuration/.babelrc"
-        }
-      ]
-    },
-    "transformIgnorePatterns": [
-      "/node_modules/(?!jest-fixture|logua|pakag|gzip-size|strip-ansi|ansi-regex|sort-package-json|detect-indent|detect-newline|is-plain-obj|sort-object-keys|chalk).*/"
-    ]
   },
   "publishConfig": {
     "provenance": true
