--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "author": "Matthias Giger",
   "scripts": {
     "postinstall": "node ./installation.js",
-    "test": "vitest run"
+    "test": "vitest run --dir test"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@manypkg/find-root": "^2.2.1",
     "@npmcli/map-workspaces": "^3.0.4",
+    "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "current-git-branch": "^1.1.0",
@@ -34,13 +35,14 @@
     "filesize": "^10.0.12",
     "gzip-size": "^7.0.0",
     "is-ci": "^3.0.1",
+    "jest": "^29.6.2",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "lodash.unset": "^4.5.2",
     "logua": "^2.3.0",
     "npm-check-updates": "^16.12.2",
     "pacote": "^17.0.2",
-    "pakag": "^3.1.0",
+    "pakag": "^3.1.1",
     "parse-gitignore": "^2.0.0",
     "prettier": "^3.0.2",
     "skip-local-postinstall": "^2.0.4",
@@ -48,6 +50,7 @@
     "strip-ansi": "^7.1.0",
     "stylelint": "^15.10.3",
     "stylelint-config-recommended": "^13.0.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
   "type": "module",
