--- a/template/default/package.json
+++ b/template/default/package.json
@@ -3,6 +3,6 @@
   "description": "<%= description %>",
   "version": "0.0.0",
   "devDependencies": {
-    "padua": "^1.0.0"
+    "padua": "latest"
   }
 }
