feat(template): configure automatic React transform for TypeScript
React no longer has to be imported. Also, adapt exports and make paths relative. Add react-typescript template. release-npm

BREAKING CHANGE: React now uses automatic transform when using TypeScript. "exports" now prefixed with package namespace.

--- a/template/react-typescript/package.json
+++ b/template/react-typescript/package.json
@@ -3,6 +3,8 @@
   "description": "<%= description %>",
   "version": "0.0.0",
   "devDependencies": {
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "padua": "latest"
   },
   "peerDependencies": {
