--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.23.10",
-    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-env": "^7.24.0",
     "@manypkg/find-root": "^2.2.1",
     "@npmcli/map-workspaces": "^3.0.4",
     "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
     "current-git-branch": "^1.1.0",
     "deep-for-each": "^3.0.0",
     "deepmerge": "^4.3.1",
-    "esbuild": "^0.20.0",
-    "eslint": "^8.56.0",
+    "esbuild": "^0.20.1",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.0",
     "fast-glob": "^3.3.2",
     "filesize": "^10.1.0",
     "gzip-size": "^7.0.0",
@@ -39,7 +42,7 @@
     "logua": "^3.0.3",
     "npm-check-updates": "^16.14.15",
     "pacote": "^17.0.6",
-    "pakag": "^3.1.1",
+    "pakag": "^3.1.3",
     "parse-gitignore": "^2.0.0",
     "prettier": "^3.2.5",
     "skip-local-postinstall": "^2.0.4",
@@ -56,7 +59,7 @@
   "source": "index.js",
   "devDependencies": {
     "jest-fixture": "^4.1.0",
-    "vitest": "^1.3.0"
+    "vitest": "^1.3.1"
   },
   "files": [
     "configuration",
@@ -69,14 +72,12 @@
     "build",
     "plugin"
   ],
-  "overrides": {
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1"
-  },
   "prettier": "./configuration/.prettierrc.json",
   "eslintConfig": {
     "extends": "./configuration/eslint.cjs",
-    "ignorePatterns": ["template"],
+    "ignorePatterns": [
+      "template"
+    ],
     "rules": {
       "no-console": "off",
       "import/extensions": [
